--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en")
 <head>
-<link rel="stylesheet" href="css/mystyle.css">
+<link rel="stylesheet" href="css/style.css">
 <title>Homepage</title>
 </head>
 <body>
