--- a/third/third.html
+++ b/third/third.html
@@ -2,7 +2,7 @@
 <html lang="en")
 <head>
 <title>Interests And Skills</title>
-<link rel="stylesheet" href="../css/mystyle.css">
+<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>	
 <h1> Skills </h1>
