Fixed a typo on third.html on line 37

--- a/third/third.html
+++ b/third/third.html
@@ -34,7 +34,7 @@
 
 <a href="../second/second.html"> <h3> View My Resume Here</h3> </a> <br />
 <br>
-<<a href="../index.html"> <h3> Go Back to Homepage</h3> </a> <br />
+<a href="../index.html"> <h3> Go Back to Homepage</h3> </a> <br />
 <br>
 <a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a> <br />
 </body>
