Added link to Github on all 3 webpages

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@ Created 1/16/2021 at 6:40 EST</p>
 <br>
 <a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a>
 <br>
+<br>
+<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a> <br />
 </body>
 </html>
