--- a/second/second.html
+++ b/second/second.html
@@ -8,9 +8,7 @@
    
 <h1> Welcome to William Adams's Resume!</h1>
 <!-- I did not use an unordered list because I did not want the entire resume (such as the titles of work places and degree programs) to be in a list and
-     I did not wish to have a series of lists ending and starting.
-     I found it easier, more efficent, and more appealing to have a P tag to encompass the entire resume and take advantage of the br take for line breaks
-     Please let me know what would you do/advise in this situation - William Adams 1/16/2021 COMM 360-50 -->
+     I did not wish to have a series of lists ending and starting. -->
 <h2> Education </h2>
     <p> <b>Master of Science in Cybersecurity </b> <br />
     Thomas Edison State University <br />
@@ -107,5 +105,6 @@
 <br>
 <a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a> <br />
 </br>
+<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a> <br />
 </body>
 </html>
