--- a/third/third.html
+++ b/third/third.html
@@ -37,5 +37,7 @@
 <a href="../index.html"> <h3> Go Back to Homepage</h3> </a> <br />
 <br>
 <a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a> <br />
+<br>
+<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a> <br />
 </body>
 </html>
