Added custom CSS rule for customHeading, removed margin from p tags

--- a/second/second.html
+++ b/second/second.html
@@ -17,8 +17,8 @@
     <br>
     <br/>
     
-    <b>Front-End Web Development </b><br />	                                                                      
-    Kentuckianaworks, Code Louisville <br />
+    <p.customheading><b>Front-End Web Development </b></p.customheading>                                                                      
+    <p>Kentuckianaworks, Code Louisville</p>
     January 2021 to April 2021 
     <br />                                                                 
     <br>
