--- a/third/third.html
+++ b/third/third.html
@@ -6,7 +6,6 @@
 </head>
 <body>	
 <h1> Skills </h1>
-<!-- I used an unordered list because I am just listing out my skills and interest with no need for detailed descriptions or a ranked order -->
 <ul>
     <li>HTML </li>
     <li>CSS</li> 
@@ -30,14 +29,21 @@
     <li>Data Security </li>
 </ul>
 
-<br>
+<div class="sectionBlocks">
+<a href="../second/second.html"> <h3> View My Resume Here</h3> </a>
+</div>
 
-<a href="../second/second.html"> <h3> View My Resume Here</h3> </a> <br />
-<br>
-<a href="../index.html"> <h3> Go Back to Homepage</h3> </a> <br />
-<br>
-<a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a> <br />
-<br>
-<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a> <br />
+<div class="sectionBlocks">
+<a href="../index.html"> <h3> Go Back to Homepage</h3> </a>
+</div>
+
+<div class="sectionBlocks">
+<a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a>
+</div>
+
+<div class="sectionBlocks">
+<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a>
+</div>
+
 </body>
 </html>
