Added a basic menu at top of page. Added nav class with active and hover states

--- a/index.html
+++ b/index.html
@@ -6,24 +6,16 @@
 </head>
 <body>
 
-<h2> Welcome to William Adams's Website!</h2>	
+<h2> Welcome to William Adams's Website!</h2>
 
+<div class="nav">
+    <a class="active" href="index.html">Home</a>
+    <a href="second/second.html">Resume</a>
+    <a href="third/third.html">Skills and Interests</a>
+  </div>
+
+  <div class="sectionBlocks">
 <p>This is the landing page of William Adams's website </p>
-
-<div class="sectionBlocks">
-<a href="second/second.html"> <h3> View My Resume Here</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="third/third.html"> <h3> View My Interests and Skills Here</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a>
 </div>
 
 </body>
