--- a/third/third.html
+++ b/third/third.html
@@ -4,7 +4,14 @@
 <title>Interests And Skills</title>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>	
+<body>
+    <h2>Welcome to William Adams's Skills and Interests!</h2>
+
+    <div class="nav">
+        <a href="../index.html">Home</a>
+        <a href="../second/second.html">Resume</a>
+        <a class="active" href="../third/third.html">Skills and Interests</a>
+    </div>	
 <h1> Skills </h1>
 <ul>
     <li>HTML </li>
