--- a/second/second.html
+++ b/second/second.html
@@ -5,8 +5,13 @@
 <title>Resume</title>
 </head>
 <body>
-   
-<h1> Welcome to William Adams's Resume!</h1>
+    <h2> Welcome to William Adams's Resume!</h2>
+
+    <div class="nav">
+        <a href="../index.html">Home</a>
+        <a class="active"href="second/second.html">Resume</a>
+        <a href="../third/third.html">Skills and Interests</a>
+    </div>
 
 <h2> Education </h2>
 
@@ -122,22 +127,6 @@
 </div>
 
 <h2>References available upon request </h2>
-
-<div class="sectionBlocks">
-<a href="../index.html"> <h3> Go Back to Homepage</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="../third/third.html"> <h3> View My Interests and Skills Here</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="https://github.com/WBADAM03"> <h3> Check out My Github </a> </h3>
-</div>
 
 </body>
 </html>
