--- a/second/second.html
+++ b/second/second.html
@@ -9,7 +9,7 @@
 
     <div class="nav">
         <a href="../index.html">Home</a>
-        <a class="active"href="second/second.html">Resume</a>
+        <a class="active"href="second.html">Resume</a>
         <a href="../third/third.html">Skills and Interests</a>
     </div>
 
