--- a/third/third.html
+++ b/third/third.html
@@ -10,9 +10,10 @@
     <div class="nav">
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
-        <a class="active" href="../third/third.html">Skills and Interests</a>
+        <a class="active" href="third.html">Skills and Interests</a>
     </div>	
-<h1> Skills </h1>
+<h2> Skills </h2>
+
 <ul>
     <li>HTML </li>
     <li>CSS</li> 
@@ -28,29 +29,13 @@
     <li>Penetration Testing </li>
 </ul>
 
-<h1> Interests</h1>
+<h2> Interests</h2>
 <ul>
     <li>Front-End Web Design </li>
     <li>Cybersecurity policies and Administration </li>
     <li>CRM optimization </li>
     <li>Data Security </li>
 </ul>
-
-<div class="sectionBlocks">
-<a href="../second/second.html"> <h3> View My Resume Here</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="../index.html"> <h3> Go Back to Homepage</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="https://www.linkedin.com/in/william-adams-6a605b192/"> <h3> Connect With Me on Linkedin</h3> </a>
-</div>
-
-<div class="sectionBlocks">
-<a href="https://github.com/WBADAM03"> <h3> Check out My Github </h3> </a>
-</div>
 
 </body>
 </html>
