Fixed minor formatting issues

--- a/third/third.html
+++ b/third/third.html
@@ -12,7 +12,7 @@
         <a href="../second/second.html">Resume</a>
         <a class="active" href="third.html">Skills and Interests</a>
     </div>	
-<h2> Skills </h2>
+<h2>Skills:</h2>
 
 <ul>
     <li>HTML </li>
@@ -29,7 +29,7 @@
     <li>Penetration Testing </li>
 </ul>
 
-<h2> Interests</h2>
+<h2>Interests:</h2>
 <ul>
     <li>Front-End Web Design </li>
     <li>Cybersecurity policies and Administration </li>
