Added side menu - still buggy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<h2> Welcome to William Adams's Website!</h2>
+<div class="main">
+
+<h2>Welcome to William Adams's Website!</h2>
 
 <div class="nav">
     <a class="active" href="index.html">Home</a>
@@ -14,9 +16,9 @@
     <a href="third/third.html">Skills and Interests</a>
   </div>
 
-  <div class="sectionBlocks">
+  <div class="sectionBlocks", "main">
 <p>This is the landing page of William Adams's website </p>
 </div>
-
+</div>
 </body>
 </html>
