--- a/second/second.html
+++ b/second/second.html
@@ -5,6 +5,7 @@
 <title>Resume</title>
 </head>
 <body>
+    <div class="main">
     <h2> Welcome to William Adams's Resume!</h2>
 
     <div class="nav">
@@ -13,7 +14,7 @@
         <a href="../third/third.html">Skills and Interests</a>
     </div>
 
-<h2>Education:</h2>
+<h2 class="main">Education:</h2>
 
 <div class="sectionBlocks"></div>
     <p class="customHeading">Master of Science in Cybersecurity</p>
@@ -35,7 +36,7 @@
     <p>Major GPA of 3.6</p>
 </div>
 
-<h2>Work Experince:</h2> 
+<h2 class="main">Work Experince:</h2> 
 
 <div class="sectionBlocks">
     <p class="customHeading">Online Enrollment Counselor, Delphi Center for Teaching and Learning (University of Louisville) </p>
@@ -87,7 +88,7 @@
     </ul>
 </div>
 
-<h2>Volunteer Experience:</h2>
+<h2 class="main">Volunteer Experience:</h2>
 
 <div class="sectionBlocks">
     <p class="customHeading">Crisis Intervention Counselor, Centerstone </p>
@@ -99,7 +100,7 @@
     </ul>
 </div>
 
-<h2>Skills and Certifications:</h2>
+<h2 class="main">Skills and Certifications:</h2>
 
 <div class="sectionBlocks">
     <ul>
@@ -112,7 +113,7 @@
     </ul>
  </div>
 
-<h2>Academic and Professional Achievements:</h2>
+<h2 class="main">Academic and Professional Achievements:</h2>
 
 <div class="sectionBlocks"></div>
     <ul>
@@ -126,7 +127,6 @@
     </ul>
 </div>
 
-<h2>References available upon request</h2>
-
+<h2 class="main">References available upon request</h2>
 </body>
 </html>
