Fixed menu glitch, improved code formatting. Removed old CSS  lines not needed

--- a/second/second.html
+++ b/second/second.html
@@ -5,8 +5,10 @@
 <title>Resume</title>
 </head>
 <body>
-    <div class="main">
-    <h2> Welcome to William Adams's Resume!</h2>
+
+    <div class="sectionBlocks moveright">
+        <h2> Welcome to William Adams's Resume!</h2>
+    </div>
 
     <div class="nav">
         <a href="../index.html">Home</a>
@@ -14,119 +16,131 @@
         <a href="../third/third.html">Skills and Interests</a>
     </div>
 
-<h2 class="main">Education:</h2>
+<div class="sectionBlocks moveright">
+    <h2>Education:</h2>
+</div>
 
-<div class="sectionBlocks"></div>
+<div class="sectionBlocks moveright">
     <p class="customHeading">Master of Science in Cybersecurity</p>
     <p>Thomas Edison State University</p>
     <p>May 2020 to Nov 2021 (expected) </p>
     <p>Current 4.0 GPA</p>
 </div>
 
-<div class="sectionBlocks">
-    <p class=customHeading>Front-End Web Development</p>                                                                      
+<div class="sectionBlocks moveright">
+    <p class="customHeading">Front-End Web Development</p>                                                                      
     <p>Kentuckianaworks, Code Louisville</p>
     <p>January 2021 to April 2021</p>
 </div>
 
-<div class=sectionBlocks'>
-    <p class= "customHeading">Bachelor of Arts in Psychology with a Track in Social Sciences </p>
+<div class="sectionBlocks moveright">
+    <p class="customHeading">Bachelor of Arts in Psychology with a Track in Social Sciences </p>
     <p>University of Louisville</p>
     <p>August 2014 to May 2019 </p>
     <p>Major GPA of 3.6</p>
 </div>
+<div class="moveright">
+    <h2>Work Experince:</h2> 
+</div>
 
-<h2 class="main">Work Experince:</h2> 
-
-<div class="sectionBlocks">
+<div class="sectionBlocks moveright">
     <p class="customHeading">Online Enrollment Counselor, Delphi Center for Teaching and Learning (University of Louisville) </p>
     <p>June 2019 – Current </p>
     <ul>
-    <li>Identify barriers to student success, provide solutions to faculty and students.</li>
-    <li>Maintain database integrity by ensuring that thousands of records are properly processed and secure. </li>
-    <li>Coordinate with a team to provide enrollment counseling for all online programs offered.</li>
-    <li>Observe trends in enrollment and marketing campaigns.</li>
-    <li>Work with marketing to assess leads and evaluate advertisement campaigns.</li>
-    <li>Optimized CRM system, saving over 5 hours of processing time per week (Boolean logic).</li>
+        <li>Identify barriers to student success, provide solutions to faculty and students.</li>
+        <li>Maintain database integrity by ensuring that thousands of records are properly processed and secure. </li>
+        <li>Coordinate with a team to provide enrollment counseling for all online programs offered.</li>
+        <li>Observe trends in enrollment and marketing campaigns.</li>
+        <li>Work with marketing to assess leads and evaluate advertisement campaigns.</li>
+        <li>Optimized CRM system, saving over 5 hours of processing time per week (Boolean logic).</li>
     </ul>
 </div>
      
-<div class="sectionBlocks">    
+<div class="sectionBlocks moveright">    
     <p class="customHeading">Student Assistant, Delphi Center for Teaching and Learning (University of Louisville)</p>
     <p>May 2018- May 2019</p>
     <ul>
-    <li>Provide administration support for faculty and staff.</li>
-    <li>Maintain office systems including computer systems.</li>
-    <li>Technology troubleshooting and support for U of L faculty.</li>
+        <li>Provide administration support for faculty and staff.</li>
+        <li>Maintain office systems including computer systems.</li>
+        <li>Technology troubleshooting and support for U of L faculty.</li>
     </ul>
 </div>
 
-<div class="sectionBlocks"></div>
+<div class="sectionBlocks moveright">
     <p class="customHeading">Assistant Manager, Cinemark </p>
     <p>June 2016 - June 2017 </p>
     <ul>
-    <li>Monitor inventory handling and purchasing for the theater.</li>
-    <li>Proper cash handling of safe exceeding $25,000 in physical currency and creating necessary deposits.</li>
-    <li>Assist Patrons with concerns.</li>
-    <li>Managing floor staff and oversee the operation itself.</li>
-    <li>Communicate effectively between different theaters.</li>
+        <li>Monitor inventory handling and purchasing for the theater.</li>
+        <li>Proper cash handling of safe exceeding $25,000 in physical currency and creating necessary deposits.</li>
+        <li>Assist Patrons with concerns.</li>
+        <li>Managing floor staff and oversee the operation itself.</li>
+        <li>Communicate effectively between different theaters.</li>
     </ul>
 </div>
     
-<div class="sectionBlocks">
+<div class="sectionBlocks moveright">
     <p class="customHeading">Crew Member, Cinemark </p>
     <p>August 2013 - June 2016 </p>
     <ul>
-    <li>Promoted for superb reliability and empathic customer service skills.</li>
-    <li>Operated computerized cash registers.</li>
-    <li>Ensured customer satisfaction by resolving a wide variety of issues in a fast-paced environment including policy concerns and specific customer concerns.</li>
-    <li>Assured completion of shift paperwork and proper procedures for work.</li>
-    <li>Document customer concerns and follow up across shifts. </li>
-    <li>Answering calls that require research and coordination with other theaters.</li>
-    <li>Coordinate with team members to provide services in a variety of roles.</li>
-    <li>Ensured accuracy of cash handling processes.</li>
+        <li>Promoted for superb reliability and empathic customer service skills.</li>
+        <li>Operated computerized cash registers.</li>
+        <li>Ensured customer satisfaction by resolving a wide variety of issues in a fast-paced environment including policy concerns and specific customer concerns.</li>
+        <li>Assured completion of shift paperwork and proper procedures for work.</li>
+        <li>Document customer concerns and follow up across shifts. </li>
+        <li>Answering calls that require research and coordination with other theaters.</li>
+        <li>Coordinate with team members to provide services in a variety of roles.</li>
+        <li>Ensured accuracy of cash handling processes.</li>
     </ul>
 </div>
 
-<h2 class="main">Volunteer Experience:</h2>
+<div class=" sectionBlocks moveright">
+    <h2 class="main">Volunteer Experience:</h2>
+</div>
 
-<div class="sectionBlocks">
+<div class="sectionBlocks moveright">
     <p class="customHeading">Crisis Intervention Counselor, Centerstone </p>
     <p>March 2018 – May 2018 </p>
     <ul>
-    <li>De-escalation of crises. </li>
-    <li>Empowering clients to arrive at solutions for crises.</li>
-    <li>Making Judgment Calls to ensure safety of clients and those around them.</li>
+        <li>De-escalation of crises. </li>
+        <li>Empowering clients to arrive at solutions for crises.</li>
+        <li>Making Judgment Calls to ensure safety of clients and those around them.</li>
     </ul>
 </div>
 
-<h2 class="main">Skills and Certifications:</h2>
+<div class="sectionBlocks moveright">
+    <h2>Skills and Certifications:</h2>
+</div>
 
-<div class="sectionBlocks">
+<div class="sectionBlocks moveright">
     <ul>
-    <li>8 years of customer service experience.</li>
-    <li>3 years of psychological research experience.</li>
-    <li>Adept in Windows environments (including Windows Server 2019 OS and legacy desktop/servers from Windows XP to Windows 10 and Microsoft Server 2003).</li>
-    <li>Proficient with MS Office suite.</li>
-    <li>Foundation experience with Kali Linux and cybersecurity tools & network administration tools (such as Autopsy, Wireshark, FTK Imager).</li>
-    <li>Actively studying for Security+ and CEH certifications.</li>
+        <li>8 years of customer service experience.</li>
+        <li>3 years of psychological research experience.</li>
+        <li>Adept in Windows environments (including Windows Server 2019 OS and legacy desktop/servers from Windows XP to Windows 10 and Microsoft Server 2003).</li>
+        <li>Proficient with MS Office suite.</li>
+        <li>Foundation experience with Kali Linux and cybersecurity tools & network administration tools (such as Autopsy, Wireshark, FTK Imager).</li>
+        <li>Actively studying for Security+ and CEH certifications.</li>
     </ul>
  </div>
 
-<h2 class="main">Academic and Professional Achievements:</h2>
+ <div class="sectionBlocks moveright">
+    <h2>Academic and Professional Achievements:</h2>
+</div>
 
-<div class="sectionBlocks"></div>
+<div class="sectionBlocks moveright">
     <ul>
-    <li>Adams, W. B., Brosof L. C., & Levinson, C. A. (Dec. 2017). Does Perfectionism Affect Impairment from Eating Disorder Symptoms? Poster presented at the Undergraduate Research Symposium at the University of Louisville, Louisville, KY.</li>
-    <li>Brosof, L. C, Adams W. B., & Levison C. A. (Nov 2018). Maladaptive Perfectionism Uniquely Contributes to Eating Disorder Impairment. Poster presented at the Association for Behavioral and Cognitive Therapies Annual Conference, Washington D.C.</li>
-    <li>Member of the Psi Chi International Honor Society in Psychology since August 2017.</li>
-    <li>Psychology GPA of 3.6 with 43 credit hours in a diverse range of psychology disciplines.</li>
-    <li>4.0 Graduate program GPA in courses related to cybersecurity, Networking defense & security, and Cyber Forensics & investigation (3 completed classes).</li>
-    <li>Optimized processes to reduce amount of work needed to maintain CRM integrity (improved automation of error reporting and handling of unsubscribe requests) using Boolean logic.</li>
-    <li>Successful remote work for several months during COVID-19 Pandemic, exceed goals.</li>
+        <li>Adams, W. B., Brosof L. C., & Levinson, C. A. (Dec. 2017). Does Perfectionism Affect Impairment from Eating Disorder Symptoms? Poster presented at the Undergraduate Research Symposium at the University of Louisville, Louisville, KY.</li>
+        <li>Brosof, L. C, Adams W. B., & Levison C. A. (Nov 2018). Maladaptive Perfectionism Uniquely Contributes to Eating Disorder Impairment. Poster presented at the Association for Behavioral and Cognitive Therapies Annual Conference, Washington D.C.</li>
+        <li>Member of the Psi Chi International Honor Society in Psychology since August 2017.</li>
+        <li>Psychology GPA of 3.6 with 43 credit hours in a diverse range of psychology disciplines.</li>
+        <li>4.0 Graduate program GPA in courses related to cybersecurity, Networking defense & security, and Cyber Forensics & investigation (3 completed classes).</li>
+        <li>Optimized processes to reduce amount of work needed to maintain CRM integrity (improved automation of error reporting and handling of unsubscribe requests) using Boolean logic.</li>
+        <li>Successful remote work for several months during COVID-19 Pandemic, exceed goals.</li>
     </ul>
 </div>
 
-<h2 class="main">References available upon request</h2>
+<div class=" sectionBlocks moveright">
+    <h2>References available upon request</h2>
+</div>
+
 </body>
 </html>
