--- a/third/third.html
+++ b/third/third.html
@@ -5,37 +5,43 @@
 <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h2>Welcome to William Adams's Skills and Interests!</h2>
+    <div class="sectionBlocks moveright">
+        <h2>Welcome to William Adams's Skills and Interests!</h2>
+    </div>
 
     <div class="nav">
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
         <a class="active" href="third.html">Skills and Interests</a>
-    </div>	
-<h2>Skills:</h2>
+    </div>
 
-<ul>
-    <li>HTML </li>
-    <li>CSS</li> 
-    <li>JavaScript </li>
-    <li>C </li>
-    <li>CRM optimization (Boolean) </li>
-    <li>Higher Education Administration </li>
-    <li>Customer Service </li>
-    <li>Remote Support, including VoIP tools </li>
-    <li>Microsoft Office Suite, including Word, Excel, Outlook, Powerpoint and Access</li>
-    <li>Cybersecurity </li>
-    <li>Network Administration </li>
-    <li>Penetration Testing </li>
-</ul>
+<div class="sectionBlocks moveright">
+    <h2>Skills:</h2>
+    <ul>
+        <li>HTML </li>
+        <li>CSS</li> 
+        <li>JavaScript </li>
+        <li>C </li>
+        <li>CRM optimization (Boolean) </li>
+        <li>Higher Education Administration </li>
+        <li>Customer Service </li>
+        <li>Remote Support, including VoIP tools </li>
+        <li>Microsoft Office Suite, including Word, Excel, Outlook, Powerpoint and Access</li>
+        <li>Cybersecurity </li>
+        <li>Network Administration </li>
+        <li>Penetration Testing </li>
+    </ul>
+</div>
 
-<h2>Interests:</h2>
-<ul>
-    <li>Front-End Web Design </li>
-    <li>Cybersecurity policies and Administration </li>
-    <li>CRM optimization </li>
-    <li>Data Security </li>
-</ul>
+<div class="sectionBlocks moveright">
+    <h2>Interests:</h2>
+    <ul>
+        <li>Front-End Web Design </li>
+        <li>Cybersecurity policies and Administration </li>
+        <li>CRM optimization </li>
+        <li>Data Security </li>
+    </ul>
+</div>
 
 </body>
 </html>
