--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<div class="main">
-
-<h2>Welcome to William Adams's Website!</h2>
+<div class="moveright">
+    <h2>Welcome to William Adams's Website!</h2>
+</div>
 
 <div class="nav">
     <a class="active" href="index.html">Home</a>
@@ -16,9 +16,9 @@
     <a href="third/third.html">Skills and Interests</a>
   </div>
 
-  <div class="sectionBlocks", "main">
-<p>This is the landing page of William Adams's website </p>
+<div class="sectionBlocks moveright">
+    <p>This is the landing page of William Adams's website </p>
 </div>
-</div>
+
 </body>
 </html>
