--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a class="active" href="index.html">Home</a>
     <a href="second/second.html">Resume</a>
     <a href="third/third.html">Skills and Interests</a>
+    <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
+    <a href="https://github.com/WBADAM03">Check out my GitHub</a>
   </div>
 
 <div class="sectionBlocks moveright">
