--- a/third/third.html
+++ b/third/third.html
@@ -13,6 +13,8 @@
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
         <a class="active" href="third.html">Skills and Interests</a>
+        <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
+        <a href="https://github.com/WBADAM03">Check out my GitHub</a>
     </div>
 
 <div class="sectionBlocks moveright">
