--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en")
+<html lang="en">
 <head>
 <link rel="stylesheet" href="css/style.css">
 <title>Homepage</title>
 </head>
 <body>
 
-<div class="moveright">
+<header class="moveright">
     <h2>Welcome to William Adams's Website!</h2>
-</div>
+    <p>This is the landing page of William Adams's website </p>
+</header>
 
-<div class="nav">
+<nav class="nav">
     <a class="active" href="index.html">Home</a>
     <a href="second/second.html">Resume</a>
     <a href="third/third.html">Skills and Interests</a>
     <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
     <a href="https://github.com/WBADAM03">Check out my GitHub</a>
-  </div>
+</nav>
 
-<div class="sectionBlocks moveright">
-    <p>This is the landing page of William Adams's website </p>
-</div>
+</main>
 
+</main>
+<footer class="moveright">
+    <p>Created by William Adams, 2021</p>
+</footer>
 </body>
 </html>
