--- a/second/second.html
+++ b/second/second.html
@@ -6,46 +6,47 @@
 </head>
 <body>
 
-    <div class="sectionBlocks moveright">
+    <header class="sectionBlocks moveright">
         <h2> Welcome to William Adams's Resume!</h2>
-    </div>
+    </header>
 
-    <div class="nav">
+    <section class="nav">
         <a href="../index.html">Home</a>
         <a class="active"href="second.html">Resume</a>
         <a href="../third/third.html">Skills and Interests</a>
         <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
         <a href="https://github.com/WBADAM03">Check out my GitHub</a>
-    </div>
+    </section>
 
-<div class="sectionBlocks moveright">
-    <h2>Education:</h2>
-</div>
+<section class="sectionBlocks moveright">
+    <h2>Education&#58;</h2>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="moveright">
     <p class="customHeading">Master of Science in Cybersecurity</p>
     <p>Thomas Edison State University</p>
     <p>May 2020 to Nov 2021 (expected) </p>
     <p>Current 4.0 GPA</p>
-</div>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <p class="customHeading">Front-End Web Development</p>                                                                      
     <p>Kentuckianaworks, Code Louisville</p>
     <p>January 2021 to April 2021</p>
-</div>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <p class="customHeading">Bachelor of Arts in Psychology with a Track in Social Sciences </p>
     <p>University of Louisville</p>
     <p>August 2014 to May 2019 </p>
     <p>Major GPA of 3.6</p>
-</div>
-<div class="moveright">
-    <h2>Work Experince:</h2> 
-</div>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="moveright">
+    <h2>Work Experince&#58;</h2> 
+</section>
+
+<section class="sectionBlocks moveright">
     <p class="customHeading">Online Enrollment Counselor, Delphi Center for Teaching and Learning (University of Louisville) </p>
     <p>June 2019 – Current </p>
     <ul>
@@ -56,9 +57,9 @@
         <li>Work with marketing to assess leads and evaluate advertisement campaigns.</li>
         <li>Optimized CRM system, saving over 5 hours of processing time per week (Boolean logic).</li>
     </ul>
-</div>
+</section>
      
-<div class="sectionBlocks moveright">    
+<section class="sectionBlocks moveright">    
     <p class="customHeading">Student Assistant, Delphi Center for Teaching and Learning (University of Louisville)</p>
     <p>May 2018- May 2019</p>
     <ul>
@@ -66,9 +67,9 @@
         <li>Maintain office systems including computer systems.</li>
         <li>Technology troubleshooting and support for U of L faculty.</li>
     </ul>
-</div>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <p class="customHeading">Assistant Manager, Cinemark </p>
     <p>June 2016 - June 2017 </p>
     <ul>
@@ -78,9 +79,9 @@
         <li>Managing floor staff and oversee the operation itself.</li>
         <li>Communicate effectively between different theaters.</li>
     </ul>
-</div>
+</section>
     
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <p class="customHeading">Crew Member, Cinemark </p>
     <p>August 2013 - June 2016 </p>
     <ul>
@@ -93,13 +94,13 @@
         <li>Coordinate with team members to provide services in a variety of roles.</li>
         <li>Ensured accuracy of cash handling processes.</li>
     </ul>
-</div>
+</section>
 
-<div class=" sectionBlocks moveright">
-    <h2 class="main">Volunteer Experience:</h2>
-</div>
+<section class=" sectionBlocks moveright">
+    <h2 class="main">Volunteer Experience&#58;</h2>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <p class="customHeading">Crisis Intervention Counselor, Centerstone </p>
     <p>March 2018 – May 2018 </p>
     <ul>
@@ -107,13 +108,13 @@
         <li>Empowering clients to arrive at solutions for crises.</li>
         <li>Making Judgment Calls to ensure safety of clients and those around them.</li>
     </ul>
-</div>
+</section>
 
-<div class="sectionBlocks moveright">
-    <h2>Skills and Certifications:</h2>
-</div>
+<section class="sectionBlocks moveright">
+    <h2>Skills and Certifications&#58;</h2>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <ul>
         <li>8 years of customer service experience.</li>
         <li>3 years of psychological research experience.</li>
@@ -122,13 +123,13 @@
         <li>Foundation experience with Kali Linux and cybersecurity tools & network administration tools (such as Autopsy, Wireshark, FTK Imager).</li>
         <li>Actively studying for Security+ and CEH certifications.</li>
     </ul>
- </div>
+</section>
 
- <div class="sectionBlocks moveright">
-    <h2>Academic and Professional Achievements:</h2>
-</div>
+ <section class="sectionBlocks moveright">
+    <h2>Academic and Professional Achievements&#58;</h2>
+ </section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <ul>
         <li>Adams, W. B., Brosof L. C., & Levinson, C. A. (Dec. 2017). Does Perfectionism Affect Impairment from Eating Disorder Symptoms? Poster presented at the Undergraduate Research Symposium at the University of Louisville, Louisville, KY.</li>
         <li>Brosof, L. C, Adams W. B., & Levison C. A. (Nov 2018). Maladaptive Perfectionism Uniquely Contributes to Eating Disorder Impairment. Poster presented at the Association for Behavioral and Cognitive Therapies Annual Conference, Washington D.C.</li>
@@ -138,11 +139,14 @@
         <li>Optimized processes to reduce amount of work needed to maintain CRM integrity (improved automation of error reporting and handling of unsubscribe requests) using Boolean logic.</li>
         <li>Successful remote work for several months during COVID-19 Pandemic, exceed goals.</li>
     </ul>
-</div>
+</section>
 
-<div class=" sectionBlocks moveright">
+<section class=" sectionBlocks moveright">
     <h2>References available upon request</h2>
-</div>
+</section>
 
+<footer class="moveright">
+<p>Created by William Adams, 2021</p>
+</footer>
 </body>
 </html>
