--- a/third/third.html
+++ b/third/third.html
@@ -5,19 +5,19 @@
 <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="sectionBlocks moveright">
+    <header class="sectionBlocks moveright">
         <h2>Welcome to William Adams's Skills and Interests!</h2>
-    </div>
+    </header>
 
-    <div class="nav">
+    <section class="nav">
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
         <a class="active" href="third.html">Skills and Interests</a>
         <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
         <a href="https://github.com/WBADAM03">Check out my GitHub</a>
-    </div>
+    </section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <h2>Skills:</h2>
     <ul>
         <li>HTML </li>
@@ -33,9 +33,9 @@
         <li>Network Administration </li>
         <li>Penetration Testing </li>
     </ul>
-</div>
+</section>
 
-<div class="sectionBlocks moveright">
+<section class="sectionBlocks moveright">
     <h2>Interests:</h2>
     <ul>
         <li>Front-End Web Design </li>
@@ -43,7 +43,11 @@
         <li>CRM optimization </li>
         <li>Data Security </li>
     </ul>
-</div>
-
+</section>
+<main>
+<footer class="moveright">
+    <p>Created by William Adams, 2021</p>
+</footer>
+</main>
 </body>
 </html>
