Fixed typos, compressed background for loading. Trimmed resume and skills

--- a/second/second.html
+++ b/second/second.html
@@ -22,17 +22,17 @@
     <h2>Education&#58;</h2>
 </section>
 
+<section class="sectionBlocks moveright">
+    <p class="customHeading">Front-End Web Development</p>                                                                      
+    <p>Kentuckianaworks, Code Louisville</p>
+    <p>January 2021 to April 2021</p>
+</section>
+
 <section class="moveright">
     <p class="customHeading">Master of Science in Cybersecurity</p>
     <p>Thomas Edison State University</p>
     <p>May 2020 to Nov 2021 (expected) </p>
     <p>Current 4.0 GPA</p>
-</section>
-
-<section class="sectionBlocks moveright">
-    <p class="customHeading">Front-End Web Development</p>                                                                      
-    <p>Kentuckianaworks, Code Louisville</p>
-    <p>January 2021 to April 2021</p>
 </section>
 
 <section class="sectionBlocks moveright">
@@ -43,7 +43,7 @@
 </section>
 
 <section class="moveright">
-    <h2>Work Experince&#58;</h2> 
+    <h2>Work Experience&#58;</h2> 
 </section>
 
 <section class="sectionBlocks moveright">
@@ -110,34 +110,16 @@
     </ul>
 </section>
 
-<section class="sectionBlocks moveright">
-    <h2>Skills and Certifications&#58;</h2>
-</section>
-
-<section class="sectionBlocks moveright">
-    <ul>
-        <li>8 years of customer service experience.</li>
-        <li>3 years of psychological research experience.</li>
-        <li>Adept in Windows environments (including Windows Server 2019 OS and legacy desktop/servers from Windows XP to Windows 10 and Microsoft Server 2003).</li>
-        <li>Proficient with MS Office suite.</li>
-        <li>Foundation experience with Kali Linux and cybersecurity tools & network administration tools (such as Autopsy, Wireshark, FTK Imager).</li>
-        <li>Actively studying for Security+ and CEH certifications.</li>
-    </ul>
-</section>
-
  <section class="sectionBlocks moveright">
     <h2>Academic and Professional Achievements&#58;</h2>
  </section>
 
 <section class="sectionBlocks moveright">
     <ul>
-        <li>Adams, W. B., Brosof L. C., & Levinson, C. A. (Dec. 2017). Does Perfectionism Affect Impairment from Eating Disorder Symptoms? Poster presented at the Undergraduate Research Symposium at the University of Louisville, Louisville, KY.</li>
-        <li>Brosof, L. C, Adams W. B., & Levison C. A. (Nov 2018). Maladaptive Perfectionism Uniquely Contributes to Eating Disorder Impairment. Poster presented at the Association for Behavioral and Cognitive Therapies Annual Conference, Washington D.C.</li>
-        <li>Member of the Psi Chi International Honor Society in Psychology since August 2017.</li>
-        <li>Psychology GPA of 3.6 with 43 credit hours in a diverse range of psychology disciplines.</li>
-        <li>4.0 Graduate program GPA in courses related to cybersecurity, Networking defense & security, and Cyber Forensics & investigation (3 completed classes).</li>
-        <li>Optimized processes to reduce amount of work needed to maintain CRM integrity (improved automation of error reporting and handling of unsubscribe requests) using Boolean logic.</li>
-        <li>Successful remote work for several months during COVID-19 Pandemic, exceed goals.</li>
+        <li class="sectionBlocks"">Brosof, L. C, Adams W. B., & Levison C. A. (Nov 2018). Maladaptive Perfectionism Uniquely Contributes to Eating Disorder Impairment. Poster presented at the Association for Behavioral and Cognitive Therapies Annual Conference, Washington D.C.</li>
+        <li class="sectionBlocks">Adams, W. B., Brosof L. C., & Levinson, C. A. (Dec. 2017). Does Perfectionism Affect Impairment from Eating Disorder Symptoms? Poster presented at the Undergraduate Research Symposium at the University of Louisville, Louisville, KY.</li>
+        <li class="sectionBlocks">Optimized processes to reduce amount of work needed to maintain CRM integrity (improved automation of error reporting and handling of unsubscribe requests) using Boolean logic.</li>
+        <li class=sectionBlocks">Successful remote work since March 2020, exceed enrollment goals.</li>
     </ul>
 </section>
 
