--- a/third/third.html
+++ b/third/third.html
@@ -31,7 +31,7 @@
         <li>Microsoft Office Suite, including Word, Excel, Outlook, Powerpoint and Access</li>
         <li>Cybersecurity </li>
         <li>Network Administration </li>
-        <li>Penetration Testing </li>
+        <li>Penetration Testing using Kali Linux </li>
     </ul>
 </section>
 
