removed outside links, added buttons/badges - linkedin glitch

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <link rel="stylesheet" href="css/style.css">
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 <title>Homepage</title>
 </head>
 <body>
 
 <header class="moveright">
     <h2>Welcome to William Adams's Website!</h2>
-    <p>This is the landing page of William Adams's website </p>
+    <p>Connect with me on Linkedin or view my GitHub projects&#58;</p>
 </header>
+
+<section class="moveright customHeadings">
+    <a class="github-button" href="https://github.com/WBADAM03" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Follow @WBADAM03 on GitHub">Follow @WBADAM03</a>  
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="william-adams-6a605b192"><a class="LI-simple-link" href='https://www.linkedin.com/in/william-adams-6a605b192?trk=profile-badge'>William Adams</a></div>
+    <a href="https://buttons.github.io/">Source of GitHub follow button</a>   
+</section>
 
 <nav class="nav">
     <a class="active" href="index.html">Home</a>
     <a href="second/second.html">Resume</a>
     <a href="third/third.html">Skills and Interests</a>
+    <!-- Removed, buttons now exist on index page to link to these 
     <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
     <a href="https://github.com/WBADAM03">Check out my GitHub</a>
+    -->
 </nav>
 
 </main>
 
 </main>
-<footer class="moveright">
+<footer class="moveright footer">
     <p>Created by William Adams, 2021</p>
 </footer>
 </body>
