--- a/third/third.html
+++ b/third/third.html
@@ -9,13 +9,15 @@
         <h2>Welcome to William Adams's Skills and Interests!</h2>
     </header>
 
-    <section class="nav">
+    <nav class="nav">
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
         <a class="active" href="third.html">Skills and Interests</a>
-        <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
-        <a href="https://github.com/WBADAM03">Check out my GitHub</a>
-    </section>
+        <!-- Removed, buttons now exist on index page to link to these URLs
+    <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
+    <a href="https://github.com/WBADAM03">Check out my GitHub</a>
+    -->
+    </nav>
 
 <section class="sectionBlocks moveright">
     <h2>Skills:</h2>
@@ -45,7 +47,7 @@
     </ul>
 </section>
 <main>
-<footer class="moveright">
+<footer class="footer">
     <p>Created by William Adams, 2021</p>
 </footer>
 </main>
