--- a/second/second.html
+++ b/second/second.html
@@ -6,18 +6,19 @@
 </head>
 <body>
 
-    <header class="sectionBlocks moveright">
+<header class="sectionBlocks moveright">
         <h2> Welcome to William Adams's Resume!</h2>
-    </header>
+</header>
 
-    <section class="nav">
+<nav class="nav">
         <a href="../index.html">Home</a>
         <a class="active"href="second.html">Resume</a>
         <a href="../third/third.html">Skills and Interests</a>
-        <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
-        <a href="https://github.com/WBADAM03">Check out my GitHub</a>
-    </section>
-
+        <!-- Removed, buttons now exist on index page to link to these URLs
+    <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
+    <a href="https://github.com/WBADAM03">Check out my GitHub</a>
+    -->
+</nav>
 <section class="sectionBlocks moveright">
     <h2>Education&#58;</h2>
 </section>
@@ -127,7 +128,7 @@
     <h2>References available upon request</h2>
 </section>
 
-<footer class="moveright">
+<footer class="footer">
 <p>Created by William Adams, 2021</p>
 </footer>
 </body>
