Fixed typo in index footer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </main>
 
 </main>
-<footer class="moveright footer">
+<footer class="footer">
     <p>Created by William Adams, 2021</p>
 </footer>
 </body>
