removed unneeded headers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="moveright">
-    <h2>Welcome to William Adams's Website!</h2>
+    <h2>William Adams - Professional Porfolio</h2>
     <p>Connect with me on Linkedin or view my GitHub projects&#58;</p>
 </header>
 
