improved Semantic Element layout

--- a/second/second.html
+++ b/second/second.html
@@ -15,9 +15,9 @@
     <a href="https://github.com/WBADAM03">Check out my GitHub</a>
     -->
 </nav>
-<section class="sectionBlocks moveright">
+<header class="sectionBlocks moveright">
     <h2>Education&#58;</h2>
-</section>
+</header>
 
 <section class="sectionBlocks moveright">
     <p class="customHeading">Front-End Web Development</p>                                                                      
@@ -39,9 +39,9 @@
     <p>Major GPA of 3.6</p>
 </section>
 
-<section class="moveright">
+<header class="moveright">
     <h2>Work Experience&#58;</h2> 
-</section>
+</header>
 
 <section class="sectionBlocks moveright">
     <p class="customHeading">Online Enrollment Counselor, Delphi Center for Teaching and Learning (University of Louisville) </p>
@@ -93,9 +93,9 @@
     </ul>
 </section>
 
-<section class=" sectionBlocks moveright">
+<header class=" sectionBlocks moveright">
     <h2 class="main">Volunteer Experience&#58;</h2>
-</section>
+</header>
 
 <section class="sectionBlocks moveright">
     <p class="customHeading">Crisis Intervention Counselor, Centerstone </p>
@@ -120,9 +120,9 @@
     </ul>
 </section>
 
-<section class=" sectionBlocks moveright">
+<header class=" sectionBlocks moveright">
     <h2>References available upon request</h2>
-</section>
+</header>
 
 <footer class="footer">
 <p>Created by William Adams, 2021</p>
