Added blog nabigation for a class

--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -2,15 +2,18 @@
 <html lang="en")
 <head>
 <link rel="stylesheet" href="../css/style.css">
-<title>My Favorite Video Games (In no Particular Order) </title>
+<title>Blog Post</title>
 </head>
 <body>
 
 <nav class="nav">
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
-        <a class="active" href="third.html">Skills and Interests</a>
+		<a href="../third/third.html">Skills and Interests</a>
+		<a class="active" href="fourth.html">Blog</a>
 </nav>
+
+<h1 class="moveright">My Favorite Video Games:</h1>
 
 <h2 class="moveright">Role Playing Games</h2>
 <ul class="moveright">
@@ -34,5 +37,8 @@
 	<li>Super Mario Sunshine</li>
 	<li>Star Fox: Aventures</li>
 </ul>
+<footer class="footer">
+    <p>Created by William Adams, 2021</p>
+</footer>
 </body>
 </html>
