--- a/second/second.html
+++ b/second/second.html
@@ -10,6 +10,7 @@
         <a href="../index.html">Home</a>
         <a class="active"href="second.html">Resume</a>
         <a href="../third/third.html">Skills and Interests</a>
+        <a href="../fourth/fourth.html">Blog</a>
         <!-- Removed, buttons now exist on index page to link to these URLs
     <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
     <a href="https://github.com/WBADAM03">Check out my GitHub</a>
