changed blog to about me, started work on form

--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -10,33 +10,29 @@
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
 		<a href="../third/third.html">Skills and Interests</a>
-		<a class="active" href="fourth.html">Blog</a>
+		<a class="active" href="fourth.html">Contact Me:</a>
 </nav>
 
-<h1 class="moveright">My Favorite Video Games:</h1>
+<header>Contact Me:</header>
 
-<h2 class="moveright">Role Playing Games</h2>
-<ul class="moveright">
-	<li>The Elder Scrolls III: Morrowind</li>
-	<li>Dragon Age: Origins</li>
-	<li>Star Wars: Knights of the Old Republic 2: The Sith Lords</li>
-	<li>Mass Effect</li>
-</ul>
-<h2 class="moveright">Strategy Games</h2>
-<ul class="moveright">
-	<li>Europa Universalis IV</li>
-	<li>Hearts of Iron IV</li>
-	<li>The Lord of the Rings: Battle for Middle Earth</li>
-	<li>Age of Empires 2</li>
-</ul>
+<section> 
+	
+	<form action="action_page.php">
 
-<h2 class="moveright">Adventure Games</h2>
-<ul class="moveright">
-	<li>The Legend of Zelda: Majora's Mask </li>
-	<li>The Legend of Zelda: The Wind Waker</li>
-	<li>Super Mario Sunshine</li>
-	<li>Star Fox: Aventures</li>
-</ul>
+    <label for="firstname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="First Name">
+
+    <label for="lastname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Last Name">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="Message" placeholder="Comments" style="height:250px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div></section>
+
 <footer class="footer">
     <p>Created by William Adams, 2021</p>
 </footer>
