--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a class="active" href="index.html">Home</a>
     <a href="second/second.html">Resume</a>
     <a href="third/third.html">Skills and Interests</a>
-    <a href="fourth/fourth.html">Blog</a>
+    <a href="fourth/fourth.html">Contact Me:</a>
     <!-- Removed, buttons now exist on index page to link to these 
     <a href="https://www.linkedin.com/in/william-adams-6a605b192/">Check out my Linkedin</a>
     <a href="https://github.com/WBADAM03">Check out my GitHub</a>
