fixed class in form

--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -15,8 +15,8 @@
 
 <header>Contact Me:</header>
 
-<section> 
-
+<section class="moveright">
+<form class="moveright">
     <label for="firstname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="First Name">
 
@@ -24,12 +24,12 @@
     <input type="text" id="lname" name="lastname" placeholder="Last Name">
 
     <label for="subject">Subject</label>
-    <textarea id="subject" name="Message" placeholder="Comments" style="height:250px"></textarea>
+    <textarea id="subject" name="Message" placeholder="Comments" style="height:50px"></textarea>
 
     <input type="submit" value="Submit">
 
   </form>
-</div></section>
+</section>
 
 <footer class="footer">
     <p>Created by William Adams, 2021</p>
