--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -16,15 +16,18 @@
 <header>Contact Me:</header>
 
 <section class="moveright">
-<form class="moveright">
+<form class=>
     <label for="firstname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="First Name">
 
     <label for="lastname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Last Name">
+	<input type="text" id="lname" name="lastname" placeholder="Last Name">
+	
+	<label for="email">Email Address</label>
+    <input type="text" id="email" name="email" placeholder="Email">
 
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="Message" placeholder="Comments" style="height:50px"></textarea>
+    <label for="subject">Message</label>
+    <textarea id="Message" name="Message" placeholder="Comments"></textarea>
 
     <input type="submit" value="Submit">
 
