Updated flex and css

--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -12,11 +12,12 @@
 		<a href="../third/third.html">Skills and Interests</a>
 		<a class="active" href="fourth.html">Contact Me:</a>
 </nav>
-
-<header>Contact Me:</header>
-
+<main>
 <section class="moveright">
-<form class=>
+    <div>
+        <h1 style="text-align: center;">Contact Me:</h1>
+    </div>
+<form class="contactForm">
     <label for="firstname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="First Name">
 
@@ -29,7 +30,7 @@
     <label for="subject">Message</label>
     <textarea id="Message" name="Message" placeholder="Comments"></textarea>
 
-    <input type="submit" value="Submit">
+    <button type="submit">Submit</button>
 
   </form>
 </section>
@@ -38,4 +39,5 @@
     <p>Created by William Adams, 2021</p>
 </footer>
 </body>
+</main>
 </html>
