--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -5,7 +5,7 @@
 <title>Blog Post</title>
 </head>
 <body>
-
+<script src="../javascripts/script.js"></script>
 <nav class="nav">
         <a href="../index.html">Home</a>
         <a href="../second/second.html">Resume</a>
