--- a/fourth/fourth.html
+++ b/fourth/fourth.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" href="../css/style.css">
 <title>Blog Post</title>
 </head>
-<body>
 <script src="../javascripts/script.js"></script>
 <nav class="nav">
         <a href="../index.html">Home</a>
@@ -12,6 +11,7 @@
 		<a href="../third/third.html">Skills and Interests</a>
 		<a class="active" href="fourth.html">Contact Me:</a>
 </nav>
+<body>
 <main>
 <section class="moveright">
     <div>
@@ -19,7 +19,7 @@
     </div>
 <form class="contactForm">
     <label for="firstname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="First Name">
+    <input type="text" id="fname" name="firstname" placeholder="First Name"  onblur="function validateForm()">
 
     <label for="lastname">Last Name</label>
 	<input type="text" id="lname" name="lastname" placeholder="Last Name">
